modified some CSS

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,22 +6,24 @@
 </head>
 <body>
 	<nav class="clearfix">
-		<p><a href="#">Instructions</a></p>
-		<p><a href="#">Game</a></p>
+		<p><a href="#instructions">Instructions</a></p>
+		<p><a href="#game">Game</a></p>
 	</nav>
 	<hr>
-	<h1>Memory Game</h1>
+	<h1>MEMORY GAME</h1>
 		<h3>Keep your brain sharp!</h3>
-	<h2>Instructions</h2>
+	<h2><a name="instructions">Instructions</a></h2>
 		<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso, or Pairs, is a card game in which all of the cards are laid facedown on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+		<h3><a name="game">Let's play!</a></h3>
 	<div id="game-board" class="board">
 		<!-- <div class="card"></div>
 		<div class="card"></div>
 		<div class="card"></div>
 		<div class="card"></div> -->
 	</div>
+	<h2><b><a href="index.html" class="again">Play again?</a></b></h2>
 	<footer>
-		<p>Created with &hearts; by <span class="name">GA</span></p>
+		<p>Created with &hearts; by <span class="name">David Brandt</span> for <span class="name">GA</span></p>
 	</footer>
 	<script src="main.js"></script>
 </body>
